--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,9 @@ ul {
   list-style: none;
 }
 
+.col-md-6{
+  padding-bottom: 10px;
+}
 .btn-1 {
   background-color: #ffffff;
   padding: 12px 30px;
@@ -249,7 +252,7 @@ Preloader
   Navbar
   --------------------*/
 .navbar {
-  background-color: transparent;
+  background-color: #42a2f0;
   padding: 20px 0;
   transition: all 0.5s ease;
 }
@@ -262,6 +265,7 @@ Preloader
 
 .navbar>.container {
   padding: 0 15px;
+  
 }
 
 .navbar .navbar-brand {
@@ -283,6 +287,7 @@ Preloader
   padding: 5px 0;
   position: relative;
 }
+
 
 .navbar .nav-item .nav-link::before {
   content: '';
@@ -635,7 +640,7 @@ How Does It Work Section
 }
 
 .how-does-it-work-item.line-right::before {
-  content: '';
+
   position: absolute;
   height: 2px;
   width: 100%;
@@ -644,6 +649,7 @@ How Does It Work Section
   background-color: var(--main-color);
   z-index: -1;
 }
+
 
 .how-does-it-work-item .step {
   display: inline-block;
