--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ Preloader
   Navbar
   --------------------*/
 .navbar {
-  background-color: #42a2f0;
+  background-color: #2196f3;
   padding: 20px 0;
   transition: all 0.5s ease;
 }
